address spacing on title slide * move title to the left of the page to avoid overlap with the Earth * correct HTML nesting

--- a/RSEConUK2019-Cylc-Talk/css/global-stylesheet.css
+++ b/RSEConUK2019-Cylc-Talk/css/global-stylesheet.css
@@ -325,7 +325,7 @@ em {
 }
 
 table.iconlist tr td:nth-child(1) {
-    padding-right: 75px;
+    padding-right: 50px;
 }
 
 table.iconlist tr td:nth-child(1) > * {
